# Valkyrie

./: .flake8  .gitignore  .pylintrc  Maya2022_Launcher.bat  Maya2022_Launcher_DEV.bat  Maya2023_Launcher.bat  Maya2023_Launcher_DEV.bat  Maya2024_Launcher.bat  Maya2024_Launcher_DEV.bat  Maya2025_Launcher.bat  Maya2025_Launcher_DEV.bat  README.md  pyproject.toml  pyproject_test.toml  requirements.txt  setup.py  userSetup.py  valkyrie_install.py
docs/: make.bat
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/: valkyrie_style.css
docs/source/general_documentation/: project_overview.rst  project_setup.rst
docs/source/valkyrie_tools_documentation/: AssetManager.rst  index.rst
src/: setup_logging.py
src/config/: logging.dev.ini  logging.prod.ini
src/python/: userSetup.py
src/python/Asset/AssetManager/src/: asset_manager.py
src/python/Core/: core_paths.py  maya_palette.py  maya_start.py
src/python/Core/ui/Style/: RoF_styleColors.txt
src/python/Core/util/: file_util_tools.py  project_util_tools.py
src/python/Perforce/DatabaseTasks/src/: DbTasks.py
src/python/Unreal/util/src/: fbx_export_settings.py
src/python/Util/UtilTools/src/: constraint_utils.py  shader_utils.py  (+4 more)
src/tools/: userSetup.py
src/tools/Asset/AssetLoader/: changelog.rst
src/tools/Asset/AssetManager/: README.md
src/tools/Core/: core_paths.py  maya_start.py
src/tools/Core/util/: file_util_tools.py  maya_colors.py  maya_file_util_tools.py  string_util_tools.py
src/tools/Rigging/VulcanRig/: .gitignore  README.md
src/tools/Util/UtilTools/: __init__.py  changelog.rst
(+102 files in other folders)
